Updated index.html with one line
I added a single line to differentiate between branchone and the master branch

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 <p>This is a new line that I am going to push</p>
-
+<p>This is a line that is part of branchone</p>
+  
 </body>
 </html>
